# pico_synth_sandbox-library

./: .gitignore  .readthedocs.yaml  BUILD.md  Makefile  README.md  README.rst  arpeggiator.py  audio_in.kicad_sch  battery.kicad_sch  boot.py  display.py  i2s_audio.kicad_sch  microphone.py  midi.kicad_sch  midi.py  pico_synth_sandbox.kicad_pro  pico_synth_sandbox.kicad_sch  pwm_audio.kicad_sch  pyproject.toml  requirements.txt  sequencer.py  settings.toml  timer.py  waveform.py
circuitpython/: Makefile  README.md  boot.py  code.py  requirements.txt  settings.toml
circuitpython/examples/: basic.py  display-bar-horizontal.py  display-bar-vertical.py  drums.py  filter.py  microphone-fft.py  microphone-sample.py  microphone.py  midi.py  monophonic.py  sample-browser.py  sample-filter.py  sample-simple.py  sequencer.py  simple.py  synth.py
circuitpython/pico_synth_sandbox/: __init__.py  display.py  midi.py  sequencer.py  synth.py  timer.py  waveform.py
circuitpython/pico_synth_sandbox/keyboard/: __init__.py  touch.py
circuitpython/pico_synth_sandbox/voice/: drum.py  oscillator.py
circuitpython/src/: arpeggiator.py  audio.py  display.py  encoder.py  global.py  import.py  keyboard.py  microphone.py  midi.py  sequencer.py  synth.py  timer.py  touch-keyboard.py  voice.py  waveform.py
circuitpython/src/voices/: drum.py  oscillator.py  (+1 more)
circuitpython/tests/: capacitive_keys.py  microphone.py
docs/: Makefile  api.rst  build.rst  conf.py  examples.rst  index.rst  install.rst  library.rst  software.rst
examples/: basic.py  display-bar-horizontal.py  display-bar-vertical.py  drums.py  filter.py  microphone-fft.py  microphone-sample.py  microphone.py  midi.py  monophonic.py  sample-browser.py  sample-filter.py  sample-loop.py  sample-simple.py  sequencer.py  simple.py
keyboard/: __init__.py  touch.py
pico_synth_sandbox/: __init__.py  arpeggiator.py  audio.py  board.py  display.py  encoder.py  menu.py  microphone.py  midi.py  synth.py  tasks.py  timer.py  waveform.py
pico_synth_sandbox/keyboard/: __init__.py  ton_touch.py  touch.py
pico_synth_sandbox/voice/: __init__.py  drum.py  oscillator.py  sample.py
voice/: oscillator.py  sample.py
